# flowshift

./: .gitignore  Cargo.toml  FLOWSHIFT_AUDIT_AND_FIX_REPORT.md  FLOWSHIFT_HANDOFF.md  HANDOFF_CURRENT.md  MANUAL_TEST_CHECKLIST.md  README.md  TODO_CURRENT.md  VERSION  diagnose_flowshift_install.ps1  install_flowshift.bat  install_flowshift.ps1  install_webgui.bat  install_webgui.ps1  opencode.json  requirements.txt  test_update_flowshift.ps1  uninstall_flowshift.bat  uninstall_flowshift.ps1  uninstall_webgui.bat  uninstall_webgui.ps1  update_flowshift.ps1
.github/workflows/: release.yml
docs/: architecture.md  clipboard.md  clipboard_semantics.md  hotkey-config.md  install_test_checklist.md  linux_backend_plan.md  overlay_architecture.md  protocol.md  setup.md
packaging/: FlowShift.iss  build_release.ps1  test_release_packaging.ps1
scripts/: bump_dev_version.py
src/python/: README.md  clipboard_events.py  clipboard_files.py  clipboard_html.py  clipboard_image.py  clipboard_model.py  clipboard_preview.py  clipboard_protocol.py  clipboard_runtime.py  clipboard_sources.py  clipboard_store.py  clipboard_transfer.py  clipboard_win.py  config.example.json  config.json  config_schema.py  e2e_test.py  elevated_task.py  flowshift_diagnose.py  flowshift_diagnostics.py  gui.py  input_events.py  keymap.py  live_network_test.py  menutest.py  overlay_controller.py  overlay_geometry.py  overlay_host.py  overlay_ipc_stress_test.py  overlay_protocol.py  (+54 more)
src/service/: Cargo.toml
src/service/src/: config.rs  hooks.rs  hotkey.rs  inject.rs  main.rs  network.rs
webgui/: index.html  overlay.html  package-lock.json  package.json  vite.config.js
(+28 files in other folders)
