[package]
name = "flowshift-service"
version = "0.1.0"
edition = "2021"
description = "FlowShift background daemon"

[dependencies]
flowshift-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
